# data-mesh-diagram-generator

./: .gitignore  README.md  example_data_mesh.yml  pyproject.toml
data_mesh_diag/: graph.py  main.py  model.py
